--- a/crawling_code/Tech_crunch.ipynb
+++ b/crawling_code/Tech_crunch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,26 +13,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting selenium\n",
-      "  Using cached https://files.pythonhosted.org/packages/80/d6/4294f0b4bce4de0abf13e17190289f9d0613b0a44e5dd6a7f5ca98459853/selenium-3.141.0-py2.py3-none-any.whl\n",
-      "Requirement already satisfied: urllib3 in c:\\users\\lgpc\\anaconda3\\lib\\site-packages (from selenium) (1.24.2)\n",
-      "Installing collected packages: selenium\n",
-      "Successfully installed selenium-3.141.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!pip install selenium"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -76,7 +64,7 @@
        "10"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -121,23 +109,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>CJ올리브네트웍스, 전 직원에 AI 아카데미 교육 실시 - ITWorld Korea</td>\n",
+       "      <td>“2022년까지 AI 프로젝트 85%가 잘못된 결과 도출\"…가트너 - ITWorld...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>성공적인 AI 도입을 위한 실전 가이드 - IDG Tech Dossier - ITW...</td>\n",
+       "      <td>IDG 블로그 | SaaS 기반 AI 학습 서비스의 엄청난 가능성 - ITWorld...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>RPA, AI, 데이터옵스 등 2020년 주시해야 할 기술 8가지 - ITWorld...</td>\n",
+       "      <td>마그넷 포렌식, AI 기능 더한 디지털 포렌식 솔루션 '마그넷 엑시엄 1.1 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>AI의 진화는 어디까지...장편 영화 대본도 썼다 - ITWorld Korea</td>\n",
+       "      <td>“CPU도 AI 시대” 인텔 10세대 아이스레이크 코어 프로세서 성능 해부 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>화웨이, 신형 AI 칩으로 엔비디아와 인텔 노린다 - ITWorld Korea</td>\n",
+       "      <td>향후 10년 AI 투명성의 위험을 완화하는 방법 - ITWorld Korea</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -145,14 +133,14 @@
       ],
       "text/plain": [
        "                                               title\n",
-       "0     CJ올리브네트웍스, 전 직원에 AI 아카데미 교육 실시 - ITWorld Korea\n",
-       "1  성공적인 AI 도입을 위한 실전 가이드 - IDG Tech Dossier - ITW...\n",
-       "2  RPA, AI, 데이터옵스 등 2020년 주시해야 할 기술 8가지 - ITWorld...\n",
-       "3        AI의 진화는 어디까지...장편 영화 대본도 썼다 - ITWorld Korea\n",
-       "4        화웨이, 신형 AI 칩으로 엔비디아와 인텔 노린다 - ITWorld Korea"
+       "0  “2022년까지 AI 프로젝트 85%가 잘못된 결과 도출\"…가트너 - ITWorld...\n",
+       "1  IDG 블로그 | SaaS 기반 AI 학습 서비스의 엄청난 가능성 - ITWorld...\n",
+       "2     마그넷 포렌식, AI 기능 더한 디지털 포렌식 솔루션 '마그넷 엑시엄 1.1 ...\n",
+       "3      “CPU도 AI 시대” 인텔 10세대 아이스레이크 코어 프로세서 성능 해부 ...\n",
+       "4         향후 10년 AI 투명성의 위험을 완화하는 방법 - ITWorld Korea"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -202,38 +190,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>www.itworld.co.kr/news/123027</td>\n",
+       "      <td>www.itworld.co.kr/news/108256</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>www.itworld.co.kr/techlibrary/108332</td>\n",
+       "      <td>www.itworld.co.kr/news/137410</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>www.itworld.co.kr/news/129735</td>\n",
+       "      <td>www.itworld.co.kr/news/105638</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>www.itworld.co.kr/news/100527</td>\n",
+       "      <td>www.itworld.co.kr/news/123449</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>www.itworld.co.kr/news/111099화웨이의</td>\n",
+       "      <td>www.itworld.co.kr/news/140656</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                   link\n",
-       "0         www.itworld.co.kr/news/123027\n",
-       "1  www.itworld.co.kr/techlibrary/108332\n",
-       "2         www.itworld.co.kr/news/129735\n",
-       "3         www.itworld.co.kr/news/100527\n",
-       "4     www.itworld.co.kr/news/111099화웨이의"
+       "                            link\n",
+       "0  www.itworld.co.kr/news/108256\n",
+       "1  www.itworld.co.kr/news/137410\n",
+       "2  www.itworld.co.kr/news/105638\n",
+       "3  www.itworld.co.kr/news/123449\n",
+       "4  www.itworld.co.kr/news/140656"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +240,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "articles = driver.find_elements_by_css_selector(\"#___gcse_0 > div > div > div > div.gsc-wrapper > div.gsc-resultsbox-visible > div.gsc-resultsRoot.gsc-tabData.gsc-tabdActive > div > div.gsc-expansionArea > div > div.gs-webResult.gs-result\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " div.gs-webResult.gs-result > div.gsc-table-result > div.gsc-table-cell-snippet-close > div.gs-bidi-start-align.gs-snippet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#___gcse_0 > div > div > div > div.gsc-wrapper > div.gsc-resultsbox-visible > div.gsc-resultsRoot.gsc-tabData.gsc-tabdActive > div > div.gsc-expansionArea > div:nth-child(1) > div.gs-webResult.gs-result > div.gsc-table-result > div.gsc-table-cell-snippet-close > div.gs-bidi-start-align.gs-snippet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -276,58 +291,85 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>img</th>\n",
+       "      <th>preview</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>https://encrypted-tbn2.gstatic.com/images?q=tb...</td>\n",
+       "      <td>2018년 2월 20일 ... 가트너는 전세계 기업들이 인공지능(AI)을 본격적으로...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>https://encrypted-tbn0.gstatic.com/images?q=tb...</td>\n",
+       "      <td>2019년 11월 25일 ... 머신러닝 기반 시스템을 다루고 있다면, 학습 데이터...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>https://encrypted-tbn1.gstatic.com/images?q=tb...</td>\n",
+       "      <td>2017년 7월 19일 ... 새로운 맥락(contextual) 분석 기술인 마그넷...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>https://encrypted-tbn3.gstatic.com/images?q=tb...</td>\n",
+       "      <td>2019년 5월 29일 ... CPU와 그래픽, AI 작업에 걸쳐 성능이 향상됐고,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>https://encrypted-tbn1.gstatic.com/images?q=tb...</td>\n",
+       "      <td>3일 전 ... AI를 둘러싼 가장 큰 걱정은 머신러닝 기반 모델이 흔히 “블랙박스...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>2019년 7월 2일 ... 고객 여정이 다변화되고 경쟁이 치열해지면서, 서비스로 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>2019년 5월 2일 ... 점점 더 많은 기업이 인공지능(AI)과 머신러닝을 활용...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>2019년 11월 13일 ... 주니퍼 네트웍스 자회사인 미스트 시스템즈(www.m...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>2019년 12월 24일 ... 이처럼 도처에 AI의 활용이 늘어나고 있지만 AI에...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>2019년 2월 8일 ... 그것은 바로 AI라는 퍼즐의 중요한 조각인 특정한 기술...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 img\n",
-       "0  https://encrypted-tbn2.gstatic.com/images?q=tb...\n",
-       "1  https://encrypted-tbn0.gstatic.com/images?q=tb...\n",
-       "2  https://encrypted-tbn1.gstatic.com/images?q=tb...\n",
-       "3  https://encrypted-tbn3.gstatic.com/images?q=tb...\n",
-       "4  https://encrypted-tbn1.gstatic.com/images?q=tb..."
+       "                                             preview\n",
+       "0  2018년 2월 20일 ... 가트너는 전세계 기업들이 인공지능(AI)을 본격적으로...\n",
+       "1  2019년 11월 25일 ... 머신러닝 기반 시스템을 다루고 있다면, 학습 데이터...\n",
+       "2  2017년 7월 19일 ... 새로운 맥락(contextual) 분석 기술인 마그넷...\n",
+       "3  2019년 5월 29일 ... CPU와 그래픽, AI 작업에 걸쳐 성능이 향상됐고,...\n",
+       "4  3일 전 ... AI를 둘러싼 가장 큰 걱정은 머신러닝 기반 모델이 흔히 “블랙박스...\n",
+       "5  2019년 7월 2일 ... 고객 여정이 다변화되고 경쟁이 치열해지면서, 서비스로 ...\n",
+       "6  2019년 5월 2일 ... 점점 더 많은 기업이 인공지능(AI)과 머신러닝을 활용...\n",
+       "7  2019년 11월 13일 ... 주니퍼 네트웍스 자회사인 미스트 시스템즈(www.m...\n",
+       "8  2019년 12월 24일 ... 이처럼 도처에 AI의 활용이 늘어나고 있지만 AI에...\n",
+       "9  2019년 2월 8일 ... 그것은 바로 AI라는 퍼즐의 중요한 조각인 특정한 기술..."
       ]
      },
-     "execution_count": 100,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# articles[0].text\n",
-    "#div.gsc-table-result > div.gsc-table-cell-thumbnail.gsc-thumbnail > div > a > img\n",
     "\n",
-    "img_list = []\n",
+    "#preview 뽑아내기\n",
+    "preview_list = []\n",
     "for article in articles:\n",
-    "    img = article.find_element_by_css_selector(\"div.gsc-table-result > div.gsc-table-cell-thumbnail.gsc-thumbnail > div > a > img\").get_attribute(\"src\") \n",
-    "    img_list.append(img)\n",
-    "img=pd.DataFrame(img_list,columns=['img'])\n",
-    "img.head()"
+    "    preview = article.find_element_by_css_selector(\" div.gsc-table-result > div.gsc-table-cell-snippet-close > div.gs-bidi-start-align.gs-snippet\").text\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    preview_list.append(preview)\n",
+    "preview=pd.DataFrame(preview_list,columns=['preview'])\n",
+    "preview"
    ]
   },
   {
