--- a/crawling_code/03_crawling_all.ipynb
+++ b/crawling_code/03_crawling_all.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "import pymongo\n",
     "import pandas as pd\n",
-    "import requests\n",
-    "import "
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +43,9 @@
     "    #상세내용 뽑아내기\n",
     "    preview_list = []\n",
     "    for article in articles:\n",
-    "        preview = article.find_element_by_css_selector(\"div.assetThumb > a > p\").text\n",
+    "        preview = article.find_element_by_css_selector(\"div.assetText > a > p\").text\n",
     "        preview_list.append(preview)\n",
-    "    preview=pd.DataFrame(preview_list,columns=['img'])\n",
+    "    preview=pd.DataFrame(preview_list,columns=['preview'])\n",
     "    \n",
     "    result=pd.concat([title, link,preview], axis=1)\n",
     "    driver.quit()\n",
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,8 +186,11 @@
     "\n",
     "# 데이터 베이스와 컬렉션 생성\n",
     "#서버.데이터베이스.컬렉션\n",
-    "\n",
     "news_db = client.crawling.news_db\n",
+    "\n",
+    "\n",
+    "final_df=pd.read_csv(\"zd_net.csv\",encoding=\"utf-8\")\n",
+    "final_df2=pd.read_csv(\"Tech_crunch.csv\",encoding=\"utf-8\")\n",
     "\n",
     "items1= final_df.to_dict(\"records\")\n",
     "items2= final_df2.to_dict(\"records\")\n",
