--- a/crawling_code/03_crawling_all.ipynb
+++ b/crawling_code/03_crawling_all.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.to_csv(\"zd_net.csv\", index=False, encoding='utf-8' )\n"
+    "final_df.to_csv(\"csv_files/zd_net.csv\", index=False, encoding='utf-8' )\n"
    ]
   },
   {
@@ -145,7 +145,7 @@
    "outputs": [],
    "source": [
     "final_df2= Tech_crunch(1,2)\n",
-    "final_df2.to_csv(\"Tech_crunch.csv\", index=False, encoding='utf-8' )"
+    "final_df2.to_csv(\"csv_files/Tech_crunch.csv\", index=False, encoding='utf-8' )"
    ]
   },
   {
@@ -189,8 +189,8 @@
     "news_db = client.crawling.news_db\n",
     "\n",
     "\n",
-    "final_df=pd.read_csv(\"zd_net.csv\",encoding=\"utf-8\")\n",
-    "final_df2=pd.read_csv(\"Tech_crunch.csv\",encoding=\"utf-8\")\n",
+    "final_df=pd.read_csv(\"csv_files/zd_net.csv\",encoding=\"utf-8\")\n",
+    "final_df2=pd.read_csv(\"csv_files/Tech_crunch.csv\",encoding=\"utf-8\")\n",
     "\n",
     "items1= final_df.to_dict(\"records\")\n",
     "items2= final_df2.to_dict(\"records\")\n",
