--- a/crawling_code/04_crawling_all_bigdata.ipynb
+++ b/crawling_code/04_crawling_all_bigdata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,12 +112,23 @@
     "dom = BeautifulSoup(response.content, \"html.parser\")\n",
     "# 3. css selector를 이용하여 원하는 데이터 수집\n",
     "# select : 여러개의 엘리먼트를 리스트로 가져옴\n",
-    "# select_one : 하나의 엘리먼트 객체를 가져옴"
+    "# select_one : 하나의 엘리먼트 객체를 가져옴\n",
+    "# dom"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "articles =dom.select('.news_list_')\n",
+    "# articles[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +215,7 @@
        "14  데이터는 무엇이고 빅데이터는 과연 무엇일까? 그리고 그 두 가지의 차이를 확실히 구...  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +254,7 @@
     "    # 2. BeautifulSoup을 이용하여 css selector를 사용할 수 있는 객체로 파싱\n",
     "    # dom은 HTML 전체를 뷰티풀숩이 객체로 가져온것\n",
     "    dom = BeautifulSoup(response.content, \"html.parser\")\n",
-    "    \n",
+    "    articles =dom.select('.news_list_')\n",
     "    \n",
     "    datas = []\n",
     "\n",
@@ -275,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
