--- a/crawling_code/03_crawling_all.ipynb
+++ b/crawling_code/03_crawling_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,11 +66,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.to_csv(\"csv_files/zd_net.csv\", index=False, encoding='utf-8' )\n"
+    "final_df.to_csv(\"csv_files/zd_net.csv\", index=False, encoding='utf-8' )"
    ]
   },
   {
