--- a/crawling_code/conference_crawling_05.ipynb
+++ b/crawling_code/conference_crawling_05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "11  2020, 비대면 언택트(Un+Contact) 마케팅이 뜬다!\\n일시 : 2019년..."
       ]
      },
-     "execution_count": 169,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
     "import pandas as pd\n",
     "\n",
     "title_list = []\n",
-    "exchange_tilte = soup.select('body > div > main > div > ul > li > a > dl  ')\n",
+    "#exchange_tilte = soup.select('body > div > main > div > ul > li > a > dl  ')\n",
     "\n",
     "for titles in exchange:\n",
     "    title = titles.text.strip()\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "11  http://conference.etnews.com/conference_view.h..."
       ]
      },
-     "execution_count": 182,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,9 +348,9 @@
     "import pandas as pd\n",
     "\n",
     "link_list = []\n",
-    "#exchange_link = soup.select('body > div > main > div > ul > li > a  ')\n",
+    "exchange_link = soup.select('body > div > main > div > ul > li > a  ')\n",
     "\n",
-    "for links in exchange:\n",
+    "for links in exchange_link:\n",
     "    a = \"http://conference.etnews.com/\"\n",
     "    link = (a+links.attrs['href'])\n",
     "    link_list.append(link)\n",
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -426,51 +426,51 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>11</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -478,21 +478,21 @@
       ],
       "text/plain": [
        "                                                  img\n",
-       "0   http://conference.etnews.com/conference_view.h...\n",
-       "1   http://conference.etnews.com/conference_view.h...\n",
-       "2   http://conference.etnews.com/conference_view.h...\n",
-       "3   http://conference.etnews.com/conference_view.h...\n",
-       "4   http://conference.etnews.com/conference_view.h...\n",
-       "5   http://conference.etnews.com/conference_view.h...\n",
-       "6   http://conference.etnews.com/conference_view.h...\n",
-       "7   http://conference.etnews.com/conference_view.h...\n",
-       "8   http://conference.etnews.com/conference_view.h...\n",
-       "9   http://conference.etnews.com/conference_view.h...\n",
-       "10  http://conference.etnews.com/conference_view.h...\n",
-       "11  http://conference.etnews.com/conference_view.h..."
+       "0   https://img.etnews.com/photo_main/conference/2...\n",
+       "1   https://img.etnews.com/photo_main/conference/2...\n",
+       "2   https://img.etnews.com/photo_main/conference/2...\n",
+       "3   https://img.etnews.com/photo_main/conference/2...\n",
+       "4   https://img.etnews.com/photo_main/conference/2...\n",
+       "5   https://img.etnews.com/photo_main/conference/2...\n",
+       "6   https://img.etnews.com/photo_main/conference/2...\n",
+       "7   https://img.etnews.com/photo_main/conference/2...\n",
+       "8   https://img.etnews.com/photo_main/conference/2...\n",
+       "9   https://img.etnews.com/photo_main/conference/2...\n",
+       "10  https://img.etnews.com/photo_main/conference/2...\n",
+       "11  https://img.etnews.com/photo_main/conference/2..."
       ]
      },
-     "execution_count": 196,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,19 +505,19 @@
     "img_list = []\n",
     "exchange_img = soup.select('body > div > main > div > ul > li > a > dl > dd.thumb > img')\n",
     "\n",
-    "for imgs in exchange_img:\n",
+    "for imgs in exchange:\n",
     "    \n",
-    "    imgs = imgs.attrs['src']\n",
-    "    img_list.append(imgs)\n",
+    "    img = imgs.attrs['src']\n",
+    "    img_list.append(img)\n",
     "\n",
     "\n",
-    "img =pd.DataFrame(link_list, columns=['img'])\n",
+    "img =pd.DataFrame(img_list, columns=['img'])\n",
     "img"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -551,73 +551,73 @@
        "      <td>0</td>\n",
        "      <td>코리아 부동산 &amp; 프롭테크 대전망 2020\\n일시 : 2020년 2월 13일 (목)...</td>\n",
        "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>성공적인 디지털 혁신과 RPA 자동화를 위한 AI 활용 방안 및 실무 가이드\\n일시...</td>\n",
        "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>RPA과제 발굴 및 설계 워크숍 - 과제 기획부터 구축, 운영, 변화 관리까지 -\\...</td>\n",
        "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>코리아 양자정보통신 브레이크스루 2020\\n일시 : 2019년 12 월 13일 (금...</td>\n",
        "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>인공지능 서비스 위한 음성 사용자경험(VUX), 2020 트렌드 전망 및 실무 가이...</td>\n",
        "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
        "      <td>제10회 스마트금융 콘퍼런스\\n일시 : 10:00~17:00\\n장소 : 여의도전경련...</td>\n",
        "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
        "      <td>2019 G밸리 미래 컨퍼런스\\n일시 : 09:30~16:00\\n장소 : 포포인츠 ...</td>\n",
        "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
        "      <td>제14회 공공솔루션마켓\\n일시 : 09:40~17:00\\n장소 : 쉐라톤 서울 디큐...</td>\n",
        "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
        "      <td>“2020, 플랫폼과 프롭테크가 리드하는 미래의 부동산을 말하다”\\n일시 : 201...</td>\n",
        "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9</td>\n",
        "      <td>성공적인 디지털 혁신과 RPA 자동화 영역 확대를 위한 AI 활용 방안 및 실무 가...</td>\n",
        "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
        "      <td>2020 새로운 비즈니스 기회, ‘모빌리티’ 비즈니스 사례와 전략\\n일시 : 201...</td>\n",
        "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>11</td>\n",
        "      <td>2020, 비대면 언택트(Un+Contact) 마케팅이 뜬다!\\n일시 : 2019년...</td>\n",
        "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
-       "      <td>http://conference.etnews.com/conference_view.h...</td>\n",
+       "      <td>https://img.etnews.com/photo_main/conference/2...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -653,21 +653,21 @@
        "11  http://conference.etnews.com/conference_view.h...   \n",
        "\n",
        "                                                  img  \n",
-       "0   http://conference.etnews.com/conference_view.h...  \n",
-       "1   http://conference.etnews.com/conference_view.h...  \n",
-       "2   http://conference.etnews.com/conference_view.h...  \n",
-       "3   http://conference.etnews.com/conference_view.h...  \n",
-       "4   http://conference.etnews.com/conference_view.h...  \n",
-       "5   http://conference.etnews.com/conference_view.h...  \n",
-       "6   http://conference.etnews.com/conference_view.h...  \n",
-       "7   http://conference.etnews.com/conference_view.h...  \n",
-       "8   http://conference.etnews.com/conference_view.h...  \n",
-       "9   http://conference.etnews.com/conference_view.h...  \n",
-       "10  http://conference.etnews.com/conference_view.h...  \n",
-       "11  http://conference.etnews.com/conference_view.h...  "
+       "0   https://img.etnews.com/photo_main/conference/2...  \n",
+       "1   https://img.etnews.com/photo_main/conference/2...  \n",
+       "2   https://img.etnews.com/photo_main/conference/2...  \n",
+       "3   https://img.etnews.com/photo_main/conference/2...  \n",
+       "4   https://img.etnews.com/photo_main/conference/2...  \n",
+       "5   https://img.etnews.com/photo_main/conference/2...  \n",
+       "6   https://img.etnews.com/photo_main/conference/2...  \n",
+       "7   https://img.etnews.com/photo_main/conference/2...  \n",
+       "8   https://img.etnews.com/photo_main/conference/2...  \n",
+       "9   https://img.etnews.com/photo_main/conference/2...  \n",
+       "10  https://img.etnews.com/photo_main/conference/2...  \n",
+       "11  https://img.etnews.com/photo_main/conference/2...  "
       ]
      },
-     "execution_count": 198,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
